  profiler's CPU and DSP profiling "save" commands:
	profile save <filename>
	dspprofile save <filename>
  - With symbol address information it can provide function level
    instruction, processor cycle & i-cache miss statistics
  - With callers information it can create function call callgraphs
    and create callgrind format files for Kcachegrind GUI
- Added scripts for converting symbol tables in Devpac 3 listings and DSP LOD
  files to a format understood by Hatari debugger 'symbols' command,
  and to clean 'nm' output of GCC & VBCC built a.out binaries for it

Other changes:
- HTML documentation indeces generated dynamically with JS
- Debugger tests building fixed

Fixed Games:
  Atomix (MFP, flickering bottom of the screen during samples)
  Bolo (MFP, couldn't start a game)
  Captain Blood (IKBD, fixed problem when setting the clock)
  Fokker and Downfall (ACIA/IKBD, had regressed in Hatari v1.6.x)
  Super Hang On and Super Monaco GP (MFP, flickering rasters)
  The Final Conflict (MFP, locked during the sampled intro music)
  Zuul 100/101 Menu (MFP, flickering top border)

Fixed demos :
  Anomaly Demo Main Menu by MJJ Prod (MFP, flickering top/bottom borders)
  Audio Artistic Demo by Big Alec (MFP, bad sample speed at start)
  Decade Demo - Reset (MFP, flickering bottom border)
  High Fidelity Dreams by Aura (MFP, flickering left rasters)

Fixed apps :
  Monst v1.x


 Version 1.6.2 (2012-06-24):
 ---------------------------

Emulation:
- ST video changes :
  - Fixes a rare potential crash when running in color mode and switching
    to monochrome mode for more than one VBL (eg : protection code used
    in The European Demos and The Transbeauce II Demo)
  - add more timings for the 224 bytes overscan detection on STE
  - Correct write timing for BCHG/BCLR/BSET when removing borders
  - Fix to top/bottom border removal in a rare case
- IKBD/ACIA changes :
  - Handle commands 0x12 and 0x14 sent during the IKBD reset