@@ -8,7 +8,7 @@ hatari_profile \- Post-processor for Hatari profiler data
 .SH "SYNOPSIS"
 .B hatari_profile.py
 .IR [options]
-.IR <profile data files>
+.IR <datafiles>
 .SH "DESCRIPTION"
 A Python script to post-process data produced by Hatari profiler
 "save" commands, both for CPU and DSP:
@@ -136,6 +136,7 @@ CPU profile information from 'badmood-profile.txt':
 .fi
 .SH "SEE ALSO"
 .IR hatari (1),
+.IR gst2ascii (1),
 .IR hconsole (1)
 .IR hatariui (1)
 .SH "AUTHOR"
